--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "another-ssr-boilerplate",
+  "name": "cher-the-dev",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Matthew Drake <mdrake@riotgames.com>",
+  "author": "Matthew Drake <mdrake@riotgames.com>, Cher Scarlett <me@cher.dev>",
   "license": "MIT",
   "scripts": {
     "postinstall": "node scripts/init",
@@ -27,11 +27,13 @@
     "koa-static": "^5.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet-async": "^1.3.0",
     "react-redux": "^7.1.0-alpha.5",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
